--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Learning bootstrap v5 with sass</title>
     <link rel="stylesheet" href="assets/css/style.css">
-    
+    <link rel="stylesheet" href="assets/css/fontawesome.css">
 </head>
 <body>
 <!-- ////////////////////////////////////////////////////////////////////////
                         START THE NAVBAR SECTION 
 //////////////////////////////////////////////////////////////////////////-->
-<nav class="navbar navbar-expand-lg navbar-light menu">
+<nav class="navbar navbar-expand-lg navbar-dark menu">
     <div class="container">
       <a class="navbar-brand" href="#">
           <img src="images/rlogo.png" alt="logo images" width="50px">
@@ -52,7 +52,11 @@
             </ul>
           </li> -->
         </ul>
-        <button type="button" class="rounded-pill">+1 7207727707</button>
+        <button type="button" class="rounded-pill btn-rounded">+1 7207727707
+            <span>
+                <i class="fas fa-phone-alt"></i>
+            </span>
+        </button>
       </div>
     </div>
   </nav>
